# gmock_example

./: CMakeLists.txt  README.md
src/: main.cpp
src/car/: car.cc  car.h  gastire.h  mocktire.h  tireI.h  wheelI.h
src/car/tests/: car_test.cc  gastire_test.cc  integration_test.cc
